--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 :root{
     --color-primary-1: #63657b;
     --color-primary-2: #63657b;
@@ -74,5 +75,35 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.profileText h2{
+    color: #ffffff;
+    font-size: 2em;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: 600;
+
+
+    
+}
+.profileText h2 span{
+    color: var(--color-primary-1);
+    font-size: 0.8em;
+    text-align: center;
+    font-weight: 600;
+}
+.profileText p{
+    color:  #ffffff;
+    font-size: 0.8em;
+    text-align: center;
+    font-weight: 600;
+}
+
+.education h3{
+    color: var(--color-primary-1);
+    font-size: Open Sans;
+
+
 }
 
