--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 :root{
     --color-primary-1: #63657b;
-    --color-primary-2: #63657b;
+    --color-primary-2: ;
 
-    --color-neutral-1: #201b2c;
-    --color-neutral-2: #514869;
-    --color-neutral-3: #f0ffffde;
-    --color-neutral-4: #f0ffff94;
-    --color-neutral-5: #400988;
+    --color-neutral-1: #050506;
+    --color-neutral-2: #ffffff;
+   
    
 }
 
@@ -68,42 +66,118 @@ body{
     border-radius: 50%;
     overflow: hidden;
 }
-.profileText .imgBox img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    .profileText .imgBox img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-.profileText h2{
-    color: #ffffff;
-    font-size: 2em;
-    margin-top: 20px;
-    text-align: center;
-    font-weight: 600;
-
-
-    
-}
-.profileText h2 span{
-    color: var(--color-primary-1);
-    font-size: 0.8em;
-    text-align: center;
-    font-weight: 600;
-}
-.profileText p{
-    color:  #ffffff;
-    font-size: 0.8em;
-    text-align: center;
-    font-weight: 600;
-}
-
-.education h3{
-    color: var(--color-primary-1);
-    font-size: Open Sans;
+    .profileText h2{
+        color: #ffffff;
+        font-size: 2em;
+        margin-top: 20px;
+        text-align: center;
+        font-weight: 600;
 
 
-}
+        
+    }
+    .profileText h2 span{
+        color: var(--color-primary-1);
+        font-size: 0.8em;
+        text-align: center;
+        font-weight: 600;
+    }
+    .profileText p{
+        color:  #ffffff;
+        font-size: 0.8em;
+        text-align: center;
+        font-weight: 600;
+    }
+
+    .education h3{
+        color: var(--color-primary-1);
+        font-size: Open Sans;
+
+
+    }
+    .education p{
+        color:  #ffffff;
+        font-size: 0.8em;
+        text-align: center;
+        font-weight: 600;
+        gap: 10px;
+    }
+    .contactInfo{
+        padding: 40px;
+    }
+    .title{
+        color: #fff;
+        text-transform:uppercase ;
+        font-weight: 600;
+        letter-spacing: 1px;
+        margin-bottom: 20px;
+    }
+    .contactInfo ul{
+        position: relative;
+    }
+    .contactInfo ul li{
+        position: relative;
+        list-style: none;
+        margin: 10px  0;
+        cursor: pointer;
+    }
+    .contactInfo ul li .icon{
+        display: inline-block;
+        width: 30px;
+        font-size: 18px;
+        color: #fff;
+    }
+    .contactInfo ul li .text{
+        color: #fff;
+    }
+    .contactInfo ul li span{
+        color: #fff;
+        font-weight: 300;
+    }
+    .contactInfo.education li {
+        margin-bottom: 15px;
+        
+
+    }
+    .contactInfo.education h4 {
+        color: #fff;
+        font-weight: 300;
+
+    }
+    .contactInfo.language{
+        color: #fff;
+        font-weight: 300;
+
+    }
+    .about ul + ul {
+        margin-top: 20px; 
+    }
+    .about {
+        margin-top: 20px; 
+        margin-bottom: 50px;
+    }
+    .about:last-child{
+        margin-bottom: 0px;
+    }
+    .title2{
+        color:var(--color-neutral-1) ;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin-bottom: 10px;
+    }
+    p{
+        color: #333;
+    }
+    .about ul li {
+        margin-bottom: 20px; /* Espaço entre os itens da lista */
+    }
 
