--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ body{
         text-transform: uppercase;
         letter-spacing: 1px;
         margin-bottom: 10px;
+        border-bottom: 1px solid;
     }
     p{
         color: #333;
